<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".institute">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">





        <ImageView
            android:id="@+id/cl1"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:src="@drawable/collage">

        </ImageView>
        <TextView
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kls_administrative_office"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dj"
            android:padding="10dp"
            android:textSize="20sp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Vision"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vision"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mission"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="25sp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Objectives"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="25sp"
            android:textColor="@color/black">

        </TextView>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/objective"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

